# knownext.ai

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/windows/: installer-hooks.nsh
backend/: README.md  knownext_backend.py  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: ai.py  auth.py  config.py  documents.py  github.py  projects.py  runtime.py  transcription.py  versions.py
backend/app/core/: config.py  version.py
backend/app/models/: document.py
backend/app/schemas/: ai.py  auth.py  config.py  document.py  github.py  project.py  runtime.py  version.py
backend/app/services/: ai_context_service.py  ai_service.py  ai_usage_service.py  app_storage.py  asset_reference_service.py  asset_service.py  auth_service.py  config_service.py  credential_service.py  document_service.py  draft_service.py  external_changes_service.py  filesystem_service.py  git_service.py  github_service.py  logging_service.py  mock_store.py  openai_service.py  project_service.py  rag_service.py  runtime_service.py  transcription_service.py  version_service.py
backend/tests/: test_api.py
docs/architecture/: architecture-overview.md  backend-structure.md  desktop-runtime.md  frontend-structure.md
docs/development/: getting-started.md  manual-test-checklist.md  release-1.0-readiness.md  release-process.md
docs/legal/: open-source-readiness.md
docs/product/: product-definition.md
docs/prompts/: implementation-iteration-prompt.md
docs/releases/: 0.10.0.md  0.11.0.md  0.12.0.md  0.12.1.md  0.13.0.md  0.14.0.md  0.15.0.md  0.15.1.md  0.16.0.md  0.16.1.md  0.16.2.md  0.17.0.md  0.17.1.md  0.17.2.md  0.17.3.md  0.3.0.md  0.3.1.md  0.4.0.md  0.4.1.md  0.4.2.md  0.4.3.md  0.4.4.md  0.4.5.md  0.4.6.md  0.4.7.md  0.5.0.md  0.5.1.md  (+21 more)
scripts/: build-backend-sidecar.ps1  check-version.mjs  sign-windows.ps1  start-web-backend.mjs
(+87 files in other folders)
