[project]
name = "knownext-backend"
version = "0.7.0"
description = "FastAPI backend for KnowNext.ai local desktop services."
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "openai>=1.84.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0"
]

[project.optional-dependencies]
test = [
  "httpx>=0.27.2",
  "pytest>=8.3.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
