[package]
name = "knownext-ai-desktop"
version = "0.3.1"
description = "KnowNext.ai desktop application"
authors = ["KnowNext.ai"]
license = "UNLICENSED"
repository = ""
edition = "2021"

[lib]
name = "knownext_ai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
