[package]
name = "knownext-ai-desktop"
version = "0.15.0"
description = "KnowNext.ai desktop application"
authors = ["KnowNext.ai contributors"]
license = "Apache-2.0"
repository = "https://github.com/jormazabal/knownext.ai"
edition = "2021"

[lib]
name = "knownext_ai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
time = { version = "0.3", features = ["formatting"] }
